Fix blog archive page spacing and single post image width

--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -39,9 +39,6 @@
 .entry-header {
 	.entry-title {
 		margin-bottom: 5px;
-		a {
-			color: $color__dark-grey;
-		}
 	}
 }
 
